<resources>
    <string name="app_name">Music Player</string>
    <string name="shuff_btn">Shuffle</string>
    <string name="favorite_btn">Favorites</string>
    <string name="playlist_btn">Playlists</string>
    <string name="total_song">Total Songs</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading</string>
    <string name="repeat_btn">Repeat</string>
    <string name="timer_btn">Timer</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="favourite_btn">Favorite</string>
    <string name="world_of_music">Music</string>
    <string name="title_activity_favourite">FavouriteActivity</string>
    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Xin chào bạn</string>
    <string name="settings">Cài đặt</string>
    <string name="about">Về chúng tôi</string>
    <string name="exit">Thoát</string>
    <string name="song_album">Song Album</string>
    <string name="download_btn">Download</string>
    <string name="search_view">Search View</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="user_name">User Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_playlist_details">PlaylistDetails</string>
    <string name="add_song">Add Song</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="selection_btn">Select Songs</string>
    <string name="select_all">Select All</string>
    <string name="clear_selection">Clear</string>
    <string name="add_selected">Add Selected Songs</string>
</resources>