<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Existing layout content -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageMV"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/music_player_icon_splash_screen"
        app:shapeAppearanceOverlay="@style/curved"/>

    <TextView
        android:id="@+id/songNameMV"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center_vertical"
        android:text="@string/song_name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/checkboxMV"
        app:layout_constraintStart_toEndOf="@+id/imageMV"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="6dp"
        android:singleLine="true"/>
    
    <TextView
        android:id="@+id/songAlbumMV"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center_vertical"
        android:text="@string/song_album"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/songDuration"
        app:layout_constraintStart_toEndOf="@+id/imageMV"
        app:layout_constraintTop_toBottomOf="@+id/songNameMV"
        android:singleLine="true"/>
    
    <TextView
        android:id="@+id/songDuration"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/start_tv"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/checkboxMV"
        app:layout_constraintTop_toBottomOf="@+id/songNameMV" />

    <!-- Add checkbox for multi-selection -->
    <CheckBox
        android:id="@+id/checkboxMV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
